--- a/dashboard.html
+++ b/dashboard.html
@@ -7,25 +7,18 @@
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body>
+<body class="sidebar-open">
 
-  <div class="sidebar" id="sidebar">
+  <div class="sidebar active" id="sidebar">
     <button id="closeSidebar" class="close-btn">&times;</button>
     <h2>AMS Admin</h2>
-
     <a data-section="dashboard" class="nav-link">📊 Dashboard</a>
-
     <h3>STUDENTS</h3>
-    <a href="STUDENT_REGISTRATION_LINK_HERE" target="_blank">➕ Register Student</a>
+    <a data-section="register-student" class="nav-link">➕ Register Student</a>
     <a data-section="students" class="nav-link">ℹ️ Student Info</a>
-
     <h3>FACULTY</h3>
-    <a href="FACULTY_REGISTRATION_LINK_HERE" target="_blank">➕ Register Faculty</a>
+    <a data-section="register-faculty" class="nav-link">➕ Register Faculty</a>
     <a data-section="faculty" class="nav-link">ℹ️ Faculty Info</a>
-
-    <h3>REPORTS</h3>
-    <a data-section="reports" class="nav-link">📄 Attendance Reports</a>
-
     <h3 style="margin-top: 40px;">SYSTEM</h3>
     <a data-section="about" class="nav-link">About Project</a>
     <a id="logoutLink" style="color: #f87171; cursor: pointer;">Logout</a>
@@ -37,65 +30,46 @@
   </header>
 
   <main id="content">
-
     <section id="section-dashboard" class="section active">
-      <h2>Attendance Overview</h2>
       <div class="stats-cards">
-        <div class="card">
-          <h3>Total Students</h3>
-          <p id="totalStudents">—</p>
-        </div>
-        <div class="card">
-          <h3>Present Today</h3>
-          <p id="presentCount">—</p>
-        </div>
-        <div class="card">
-          <h3>Absent Today</h3>
-          <p id="absentCount">—</p>
-        </div>
+        <div class="card"><h3>Total Students</h3><p id="totalStudents">—</p></div>
+        <div class="card"><h3>Present Today</h3><p id="presentCount">—</p></div>
+        <div class="card"><h3>Absent Today</h3><p id="absentCount">—</p></div>
       </div>
-      <div class="chart-box">
-        <canvas id="attendanceChart"></canvas>
-      </div>
+      <div class="chart-box"><canvas id="attendanceChart"></canvas></div>
     </section>
 
     <section id="section-students" class="section">
-      <h2>Student Information</h2>
-      <div class="filter-controls">
-        <input type="text" id="studentSearch" placeholder="Search by Name or Roll No..." />
-        <select id="attendanceSort">
-          <option value="all">All Semesters</option>
-          <option value="weekly">Weekly View</option>
-          <option value="monthly">Monthly View</option>
+      <div class="filter-controls-grid">
+        <input type="text" id="studentSearch" placeholder="🔍 Search Name or Roll No..." />
+        <select id="filterDept">
+          <option value="">All Departments</option>
+          <option value="Computer Science and Engineering">CSE</option>
+          <option value="Information Technology">IT</option>
+          <option value="Civil Engineering">Civil</option>
+          <option value="Mechanical Engineering">Mechanical</option>
+          <option value="EXTC">EXTC</option>
         </select>
+        <select id="filterYear">
+          <option value="">All Years</option>
+          <option value="First Year">First Year</option>
+          <option value="Second Year">Second Year</option>
+          <option value="Third Year">Third Year</option>
+          <option value="Final Year">Final Year</option>
+        </select>
+        <select id="filterSection"><option value="">Section</option><option value="A">A</option><option value="B">B</option></select>
+        <select id="filterRoll"><option value="">Roll No</option></select>
       </div>
       <div id="studentDetails" class="details-grid"></div>
     </section>
 
-    <section id="section-faculty" class="section">
-      <h2>Faculty Information</h2>
-      <div class="filter-controls">
-        <input type="text" id="facultySearch" placeholder="Search Faculty Name..." />
-      </div>
-      <div id="facultyDetails" class="details-grid"></div>
+    <section id="section-student-profile" class="section">
+        <button id="backToList" class="btn-primary" style="width: auto; margin-bottom: 20px;">← Back to List</button>
+        <div id="profileContainer"></div>
     </section>
 
-    <section id="section-reports" class="section">
-      <h2>Attendance Reports</h2>
-      <div id="reportsContainer">
-        <p>Aggregation logic loading...</p>
-      </div>
-    </section>
-
-    <section id="section-about" class="section">
-      <h2>About Project</h2>
-      <div class="card" style="width: 100%; text-align: left;">
-        <p><strong>System:</strong> Attendance Management System v2.0</p>
-        <p><strong>Database:</strong> Firebase Firestore</p>
-        <p><strong>Frontend:</strong> Vanilla JS / CSS3</p>
-      </div>
-    </section>
-
+    <section id="section-register-student" class="section"><h2>Register Student</h2><div class="card">Registration Form Here</div></section>
+    <section id="section-faculty" class="section"><h2>Faculty Info</h2><div id="facultyDetails" class="details-grid"></div></section>
   </main>
 
   <script type="module" src="app.js"></script>
