--- a/dashboard.html
+++ b/dashboard.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
-<body class="sidebar-open">
+<body>
 
-  <div class="sidebar active" id="sidebar">
+  <div class="sidebar" id="sidebar">
     <div class="brand">AMS ADMIN</div>
     <a data-section="dashboard" class="nav-link active">📊 Dashboard</a>
     
@@ -39,7 +39,11 @@
     </section>
 
     <section id="section-external-reg" class="section" style="height: 85vh; padding: 0;">
-      <iframe src="https://ru9823.github.io/Student-attendance/" style="width: 100%; height: 100%; border: none; border-radius: 12px;"></iframe>
+      <iframe 
+        src="https://ru9823.github.io/Student-attendance/" 
+        style="width: 100%; height: 100%; border: none; border-radius: 12px;"
+        allow="camera; microphone; display-capture; autoplay; clipboard-write"
+      ></iframe>
     </section>
 
     <section id="section-students" class="section">
@@ -70,8 +74,17 @@
     </section>
 
     <section id="section-faculty" class="section">
+      <div class="filter-controls-grid">
+        <input type="text" id="facultySearch" placeholder="🔍 Search Faculty Name..." />
+        <select id="facultyDeptFilter">
+            <option value="">All Departments</option>
+            <option value="CSE">CSE</option>
+            <option value="IT">IT</option>
+            <option value="Mechanical">Mechanical</option>
+        </select>
+      </div>
       <div class="card">
-          <h2>Faculty Information</h2>
+          <h2>Faculty Directory</h2>
           <div id="facultyDetails" class="details-grid"></div>
       </div>
     </section>
